# gitmemory

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
docs/: DESIGN.md
skills/view-git-history/: SKILL.md
src/view_fn_hist/: __init__.py  analyzer.py  annotator.py  cli.py  git_ops.py  parser.py  summarizer.py  ts_parser.py  tui.py
src/view_fn_hist/providers/: __init__.py  base.py  git_provider.py  github_provider.py
src/view_fn_hist/web/: __init__.py  app.py  routes.py  schemas.py
src/view_fn_hist/web/frontend/: index.html  package-lock.json
src/view_fn_hist/web/frontend/src/: App.tsx  index.css
